interim check-in to preserve code related to obtaining initial callback state
git-svn-id: https://svn.forgerock.org/openam/branches/sts_x509@10278 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d